value modified in a few  array programs